# python-libraries

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_analysis.py
.github/workflows/: python-package.yml
docs/: DATASET.md
src/climate_anomaly/: __main__.py  analysis.py  data_processing.py  modeling.py  signal_processing.py  statistics.py  utils.py  visualization.py
tests/: conftest.py  test_analysis.py  test_curve_fit.py  test_data_processing.py  test_modeling.py  test_signal_processing.py  test_statistics.py  test_utils.py  test_visualization.py
